--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="footer-powered">
-    POWERED BY: JEKYLL + GITHUB PAGES + ❤️
+    POWERED BY: CLAUDE + ❤️
   </div>
 
   <div class="footer-separator">
